Fix sale notes on small screens

--- a/app/assets/stylesheets/products/index.css
+++ b/app/assets/stylesheets/products/index.css
@@ -8,6 +8,9 @@
     flex-direction: column;
     align-items: center;
     font-size: 10pt;
+    text-align: center;
+    padding-left: 16px;
+    padding-right: 16px;
     margin-bottom: 32px;
 }
 
